more extremely stupid optimizations
I love removing whitespace

--- a/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -1,8 +1,6 @@
 <html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp();
-head(th,'Advanced dialing options');
-</script><table cellspacing=0 cellpadding=0>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+head(th,'Advanced dialing options')</script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <spacer height=40 type=vertical>
 <td abswidth=20>
@@ -13,21 +11,18 @@ head(th,'Advanced dialing options');
 <tr><td absheight=70 valign=top>
 <font size=-1>For troubleshooting, turn this on to hear dialing.
 <tr><td valign=top>
-<font size=-1>Most phone lines work with medium dialing speed. If dialing only works sometimes, try changing the speed. </table>
-<td width=20>
-<td width=240 valign=top align=left>
+<font size=-1>Most phone lines work with medium dialing speed. If dialing only works sometimes, try changing the speed.</table>
+<td width=20><td width=240 valign=top align=left>
 <form action=client:ConfirmPhoneSetup>
 <table cellspacing=0 cellpadding=0>
 <tr><td absheight=70 valign=top>
 <table><tr><td valign=top>
 <input type=checkbox name=WaitForDialTone value=true checked=&dtone; selected>
-<td valign=top>Wait for dial tone
-</table>
+<td valign=top>Wait for dial tone</table>
 <tr><td absheight=70 valign=top>
 <table><tr><td valign=top>
 <input type=checkbox name=AudibleDialing value=true checked=&audio;>
-<td valign=top>Audible dialing
-</table>
+<td valign=top>Audible dialing</table>
 <tr><td valign=top>
 <table><tr><td valign=top>
 <input type=radio name=dial-speed value=slow checked=&slow;>
@@ -37,8 +32,7 @@ head(th,'Advanced dialing options');
 <td valign=top>Medium
 <tr><td valign=top>
 <input type=radio name=dial-speed value=fast checked=&fast;>
-<td valign=top>Fast
-</table></table>
+<td valign=top>Fast</table></table>
 <tr><td><td colspan=4 height=10 valign=top align=left>
 <tr><td colspan=4><hr>
 <tr><td><td colspan=4 height=7 valign=top align=left>
