--- a/src/level0-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,9 +1,6 @@
 <html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
 <script src=file://rom/h.js></script><script src=file://rom/n.js></script>
-<script src=file://rom/JS/BuildInfo.js></script>
-</head><script>th=pp()
-head(th,'About this HackTV build','','FridayEvilArr',5);
-</script><table>
+<script src=file://rom/JS/BuildInfo.js></script></head><script>th=pp()
 <tr><td width=20><td valign=top align=right width=120><shadow>Client ROM:</shadow>
 <td width=10><td valign=top>Version &wtv-appvers;-<script>d.write(bI('version'));</script>
 <tr><td><td valign=top align=right><shadow>ROM Type:</shadow>
@@ -20,7 +17,6 @@ Brought to you by the efforts of:<br>
 - <b>Outa</b> (rev engineering, hw discoveries)<br>
 - <b>FairPlay137</b> (MAME development)<br>
 - <b>SKCro</b> (themes, design, optimization)<br>
-- <b><a href="javascript:gsa('Join the WebTV/MSNTV Discord!<br><br>https://zef.pw/wtvdiscord',rom+'Images/discord.gif','Ugh fine, I\'ll type it','','No Thanks')">WebTV Discord</a></b> (for the lulz)<br>
-<tr><td height=4>
-</table><hr>
-<table><tr><td width=600 align=right><form action='javascript:goHTV()'><script>butt(th, 'Done', '', 120, '', 'font=proportional selected')</script></form></font>
+- <b><a href="javascript:gsa('<style>b{color:#0080ff}</style>Join the WebTV/MSNTV Discord!<br><br><b>https://zef.pw/wtvdiscord</b>',rom+'Images/discord.gif','Ugh fine, I\'ll type it','','No thanks')">WebTV Discord</a></b> (for the lulz)<br>
+<tr><td height=4></table><hr>
+<table><tr><td width=600 align=right><form action=javascript:goHTV()><script>butt(th,'Done','',120,'','font=proportional selected')</script></form></font>
