--- a/src/level0-romfs/ROM/HTMLs/HackTV.html
+++ b/src/level0-romfs/ROM/HTMLs/HackTV.html
@@ -1,6 +1,5 @@
-<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
 bgm=gBGM(z_nv)
 head(th,'Welcome to HackTV','',bgm,-1)
 function doMenu(){d.ua.vu.value=d.ua.um[d.ua.um.selectedIndex].value}
@@ -40,7 +39,5 @@ window.onload = doMenu;
 <option value=wtv->wtv-</option>
 </select>
 <script>d.write('<input type=text name=vu value="" border=1 bgcolor='+gTC(th,'bg')+' text='+gTC(th,'t')+' cursor='+gTC(th,'t')+' align=center width=214 executeurl asciionly autoactivate onmouseover="urlInfo()">')</script>
-<spacer type=block width=2>
-<script>butt(th,'Go','',56,'','onmouseover=urlInfo()')</script>
-</form>
-</table></td></tr>
+<spacer type=block width=2><script>butt(th,'Go','',56,'','onmouseover=urlInfo()')</script>
+</form></table></td></tr>
