--- a/src/level0-romfs/ROM/HTMLs/PhoneReset.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneReset.html
@@ -1,6 +1,5 @@
 <html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
 head(th,'Reset dialing options')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
@@ -17,4 +16,4 @@ head(th,'Reset dialing options')
 <tr><td>
 <tr><td colspan=5 height=4 valign=top align=left><hr>
 <tr><td><td colspan=3 valign=top align=right>
-<form action=client:gotophonesetup><script>butt(th, 'Done', 'Done', 103)</script></form>
+<form action=client:gotophonesetup><script>butt(th,'Done','Done',103)</script></form>
