--- a/src/level0-romfs/ROM/HTMLs/PhoneSetupIntro.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneSetupIntro.html
@@ -1,6 +1,5 @@
 <html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-r=d.referrer
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>r=d.referrer
 if(r==rom+'HTMLs/Themes.html'||r==rom+'HTMLs/PhoneCallWaitThresh.html'||r==rom+'HTMLs/BGM.html'||r==rom+'HTMLs/NVRAM.html'){go(r)}
 </script></head><script>th=pp()
 head(th,'Phone & Dialing Settings','large','Ghosttown')
@@ -30,5 +29,4 @@ head(th,'Phone & Dialing Settings','large','Ghosttown')
 <tr><td><td colspan=4><hr>
 <tr><td><td colspan=2 height=4 valign=top align=left>
 <tr><td><td colspan=2 height=1 valign=top align=left><font size=-1><i>Choose</i> Done <i>to return to HTV.</i></font>
-<td valign=top align=right>
-<form action=javascript:goHTV()><script>butt(th,'Done','Done',103); d.write(nbsp(3));</script></form></table>
+<td valign=top align=right><form action=javascript:goHTV()><script>butt(th,'Done','Done',103);d.write(nbsp(3))</script></form></table>
