--- a/src/level0-romfs/ROM/HTMLs/SecretPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/SecretPhoneSetup.html
@@ -1,6 +1,5 @@
 <html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
-th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
 head(th,'Obscure dialing options','','AliveAtDawn')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
@@ -15,10 +14,10 @@ head(th,'Obscure dialing options','','AliveAtDawn')
 <td width=20><td width=220 valign=top align=left>
 <form action=client:ConfirmAdvancedSetup name=c>
 <table cellspacing=0 cellpadding=0>
-<tr><td valign=top colspan=3><table><tr><td valign=top align=right>
-	<font size=-1>Long-distance<br>prefix</font>
-	<td>&nbsp;<td valign=top align=left>
-	<input type=text name=LongDistancePrefix bgcolor=444444 text=ffdd33 cursor=cc9933 size=4 maxlength=16 numbers selected value=&ldp;>
+<tr><td valign=top colspan=3><table>
+<tr><td valign=top align=right><font size=-1>Long-distance<br>prefix</font>
+<td>&nbsp;<td valign=top align=left>
+<input type=text name=LongDistancePrefix bgcolor=444444 text=ffdd33 cursor=cc9933 size=4 maxlength=16 numbers selected value=&ldp;>
 </table>
 <tr><td absheight=13>
 <tr><td align=right><font size=-1>800 access</font><br>
@@ -27,14 +26,10 @@ head(th,'Obscure dialing options','','AliveAtDawn')
 <tr><td height=8>
 <tr><td absheight=10>
 <tr><td valign=top colspan=3>
-<table><tr><td valign=top>
-	<input type=checkbox name=BrokenPBX value=true checked=&broke;><font size=-1>
-	<td>&nbsp;
-	<td valign=top align=left>
-		<font size=-1>Don't dial 1 for long distance
-		<input type=hidden name=BrokenPBX value=""></font>
+<table><tr><td valign=top><input type=checkbox name=BrokenPBX value=true checked=&broke;><font size=-1>
+<td>&nbsp;<td valign=top align=left><font size=-1>Don't dial 1 for long distance
+<input type=hidden name=BrokenPBX value=""></font>
 </table></table>
 <tr><td absheight=40>
 <tr><td>
-<td colspan=3 valign=top align=right><hr><script>butt(th,'Connect','Connect',150); butt(th,'Back','Back',150,'','onclick=goHTV()')</script>
-</form></table>
+<td colspan=3 valign=top align=right><hr><script>butt(th,'Connect','Connect',150);butt(th,'Back','Back',150,'','onclick=goHTV()')</script></form></table>
