--- a/src/tmp-romfs/ROM/HTMLs/NVRAM.html
+++ b/src/tmp-romfs/ROM/HTMLs/NVRAM.html
@@ -1,7 +1,6 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://ROM/JS/htv-header.js></script>
-<script src=file://rom/JS/NVRAM.js></script>
-</head><script>th=pp()
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+th=pp()
 head(th, 'NVRAM Test Page');
 </script><h1>NVRAM Test:</h1>
 <table border=1><tr><td colspan=99>NVRAM Contents
