--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,7 +1,8 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
 <script src=file://rom/h.js></script><script src=file://rom/n.js></script>
 <script src=file://rom/JS/BuildInfo.js></script></head><script>th=pp()
-head(th,'About this HackTV build','','WTVa','');
+head(th,'About this HackTV build','','WTVa','')</script>
+<table cellspacing=0 cellpadding=0><tr><td abswidth=10>&nbsp;<td colspan=3>
 <tr><td width=20><td valign=top align=right width=120><shadow>Client ROM:</shadow>
 <td width=10><td valign=top>Version &wtv-appvers;-<script>d.write(bI('version'));</script>
 <tr><td><td valign=top align=right><shadow>ROM Type:</shadow>
