connecting audioscope gaming

--- a/src/tmp-romfs/ROM/HTMLs/Connecting.html
+++ b/src/tmp-romfs/ROM/HTMLs/Connecting.html
@@ -6,4 +6,5 @@
 	<img src=/Images/Spacer.gif width=1 height=4><br>
 	<img src=/Images/CityRoad.gif ani=/Animations/CityRoad.cel>
 </center><br>
-<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font></body></html>
+<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font>
+<center><audioscope width=80% border=2 bgcolor=191919><br><audioscope width=80% border=2 bgcolor=191919 gain=0></center>
