--- a/src/tmp-romfs/ROM/HTMLs/Connecting.html
+++ b/src/tmp-romfs/ROM/HTMLs/Connecting.html
@@ -7,4 +7,4 @@
 	<img src=/Images/CityRoad.gif ani=/Animations/CityRoad.cel>
 </center><br>
 <font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font>
-<center><audioscope width=80% border=2 bgcolor=191919><br><audioscope width=80% border=2 bgcolor=191919 gain=0></center>
+<center><audioscope width=80% height=48 leftoffset=-3% rightoffset=3% border=2 bgcolor=191919><br><audioscope width=80% height=24 border=2 bgcolor=191919 gain=0></center>
