Revert "connecting audioscope gaming"
This reverts commit 6bb217c8921b53f23619ca4000eefeb7372bfb23.

--- a/src/tmp-romfs/ROM/HTMLs/ConnectingNoMusic.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConnectingNoMusic.html
@@ -5,4 +5,4 @@
 	<img src=/Images/Spacer.gif width=1 height=4><br>
 	<img src=/Images/CityRoad.gif ani=/Animations/CityRoad.cel>
 </center><br>
-<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240><center><p>We would put an audioscope here, but you turned off the dialing music. You monster.</p></center></font>
+<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font></body></html>
