--- a/src/tmp-romfs/ROM/HTMLs/Connecting.html
+++ b/src/tmp-romfs/ROM/HTMLs/Connecting.html
@@ -7,4 +7,4 @@
 	<img src=/Images/CityRoad.gif ani=/Animations/CityRoad.cel>
 </center><br>
 <font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font><spacer height=8 type=vertical>
-<center><audioscope width=512 height=26 leftoffset=-3% rightoffset=3% border=2 bgcolor=191919 gain=1><br><audioscope width=512 height=12 border=2 bgcolor=191919 gain=0></center>
+<br><br><br><br><center><audioscope bgcolor=020202 height=12 width=340 gain=0 leftcolor=#808080 rightcolor=#ffb902 border=1>
