--- a/src/tmp-romfs/ROM/HTMLs/Connecting.html
+++ b/src/tmp-romfs/ROM/HTMLs/Connecting.html
@@ -6,5 +6,4 @@
 	<img src=/Images/Spacer.gif width=1 height=4><br>
 	<img src=/Images/CityRoad.gif ani=/Animations/CityRoad.cel>
 </center><br>
-<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font><spacer height=8 type=vertical>
-<br><br><br><br><center><audioscope bgcolor=020202 height=12 width=340 gain=0 leftcolor=#808080 rightcolor=#ffb902 border=1>
+<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font></body></html>
