--- a/src/level0-romfs/ROM/HTMLs/HackTV.html
+++ b/src/level0-romfs/ROM/HTMLs/HackTV.html
@@ -15,7 +15,7 @@ window.onload = doMenu;
 <li><a href=client:gotoconnectsetup onmouseover="setMsg('                            This page provides you with the option to choose from a list of servers that you would like to connect to.')">Connect Setup</a>
 <li><a href=client:gotophonesetup onmouseover="setMsg('                            To connect to the internet, it may be necessary to modify some dialing options.')">Phone Settings</a>
 <li><a href=SecretPhoneSetup.html  onmouseover="setMsg('                            This page allows you to set more advanced phone options, such as the 1800 number.')">Obsecure Settings</a>
-<li><a href=Themes.html onmouseover="setMsg('                            Customize the look of the HTV custom build. Currently, there are four colors to choose from.')">Theme Settings</a>
+<li><a href=Themes.html onmouseover="setMsg('                            Customize the look of the HackTV build. There are several styles to choose from.')">Theme Settings</a>
 <li><a href=BGM.html onmouseover="setMsg('                            Choose from several available background music for the HackTV Homepage.')">BGM Settings</a>
 <li><a href=TechInfoInternal.html onmouseover="setMsg('                            This page allows you to view technical information about your box. Identify the build version, ssid, and other relevant information.')">Tech Info</a>
 <li><a href=HTMLv2.html onmouseover="setMsg('                            This page allows you to play with the HTML and Javascript features of this build by offering a sandbox to play in.')">HTML Sandbox v2</a>
