--- a/src/tmp-romfs/ROM/HTMLs/Connecting.html
+++ b/src/tmp-romfs/ROM/HTMLs/Connecting.html
@@ -1,9 +1,17 @@
-<html><head><display nooptions nostatus skipback clearback><title>Connecting</title></head><body bgcolor=#0 text=449944>
-<bgsound src=file://ROM/Cache/Music/DialingWebTV.mid loop>
-<center><br><br><br><br>
-	<img src=/Images/ConnectingTo.gif ani=/Animations/ConnectingTo.cel><br>
+<html><head><display nooptions nostatus skipback clearback>
+<script src=file://rom/h.js></script><script src=file://rom/n.js></script><script>th=pp()
+head(th,'Connecting to WebTV','','DialingWebTV',-1,1)</script>
+<table width=560 height=312 cellspacing=0 cellpadding=16>
+<tr><td align=center colspan=2>
+	<img src=/Images/Spacer.gif width=1 height=44><br>
 	<img src=/Images/CityGlow.gif><br>
 	<img src=/Images/Spacer.gif width=1 height=4><br>
 	<img src=/Images/CityRoad.gif ani=/Animations/CityRoad.cel>
-</center><br>
-<font color=808080><spacer type=horizontal size=24><progressindicator name=progressindicator height=44 width=240></font></body></html>
+</td></tr><tr>
+	<td width=240 height=46 align=left valign=bottom><shadow><progressindicator name=progressindicator width=240 height=44></shadow></td>
+	<td height=1 align=right valign=bottom><shadow>
+		<b>SSID</b>: <code>&wtv-ssn;</code><br>
+		<b>Service IP</b>: <code>&wtv-1800addr;</code><br>
+		<audioscope bgcolor=020202 height=14 width=270 gain=0 border=2>
+	</shadow></td>
+</tr></table>
