--- a/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
+++ b/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
@@ -33,7 +33,7 @@ head(th, txt+' your update', '', bgm, -1, true);
 				</script>
 
 <spacer type=vertical size=165><br>
-<script>d.write('<font color='+gTC('t')+'>');d.write('<progressindicator message="'+txt+' update" textbelow name="autodisk" height=44 width=240>')</script>
+<script>d.write('<font color='+gTC(th,'t')+'>');d.write('<progressindicator message="'+txt+' update" textbelow name="autodisk" height=44 width=240>')</script>
 </font>
 
 </table>
