place h and n in cache

--- a/src/level0-romfs/ROM/HTMLs/BGM.html
+++ b/src/level0-romfs/ROM/HTMLs/BGM.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 bgm=gV(z_nv,1)
 function doSubmit(c){if(c){sB(z_nv,1,c)}}
 function doLoad(){document.r.l.selectedIndex=bgm}
