--- a/src/level0-romfs/ROM/HTMLs/ConfigureBYOISP.html
+++ b/src/level0-romfs/ROM/HTMLs/ConfigureBYOISP.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 head(th,'Use your own ISP','','snowy1')</script><table cellspacing=0 cellpadding=0>
 <tr><td colspan=4><spacer height=30 type=vertical>
 <tr><td abswidth=34><td width=220 height=166 valign=top align=left><table cellspacing=0 cellpadding=0>
