--- a/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 <script src=file://rom/JS/htv-cSetup.js></script>
 </head><form name=t><input type=hidden name=h value=&pname;></form>
 <script>th=pp()
