--- a/src/level0-romfs/ROM/HTMLs/NVRAM.html
+++ b/src/level0-romfs/ROM/HTMLs/NVRAM.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
-<script src=file://ROM/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 head(th,'NVRAM Test Page');</script><h1>NVRAM Test:</h1>
 <table border=1><tr><td colspan=99>NVRAM Contents
 <tr><td>Data:</td><script>
