--- a/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 head(th,'Advanced dialing options')</script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
 <spacer height=40 type=vertical>
