--- a/src/level0-romfs/ROM/HTMLs/PhoneCallWaitThresh.html
+++ b/src/level0-romfs/ROM/HTMLs/PhoneCallWaitThresh.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 head(th,'Call waiting sensitivity')
 </script><table cellspacing=0 cellpadding=0>
 <tr><td abswidth=34><td colspan=3>
