--- a/src/level0-romfs/ROM/HTMLs/Themes.html
+++ b/src/level0-romfs/ROM/HTMLs/Themes.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script><script>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script><script>
 th=pp()
 function sBG(c){sB(z_nv,0,c)}
 </script></head><script>head(th,'Theme Settings','large','world1',5);</script>
