--- a/src/level0-romfs/ROM/HTMLs/SSIDInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/SSIDInfo.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 </head>
 <script>
 th = pp()
