--- a/src/tmp-romfs/ROM/HTMLs/Connecting.html
+++ b/src/tmp-romfs/ROM/HTMLs/Connecting.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions nostatus skipback clearback>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script><script>th=pp()
 head(th,'Connecting to WebTV','','DialingWebTV',-1,1)</script>
 <table width=560 height=312 cellspacing=0 cellpadding=16>
 <tr><td align=center colspan=2>
