--- a/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/PhoneSetup.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
 th=pp()
 head(th,'Dialing options')
 </script><table cellspacing=0 cellpadding=0>
