--- a/src/tmp-romfs/ROM/HTMLs/TechInfoInternal.html
+++ b/src/tmp-romfs/ROM/HTMLs/TechInfoInternal.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 <script src=file://ROM/JS/BuildInfo.js></script></head><script>th=pp()
 head(th,'WebTV Technical Information','','tymplingA')
 </script><table width=100%>
