--- a/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/tmp-romfs/ROM/HTMLs/ConnectSetup.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 <script src=file://rom/JS/htv-cSetup.js></script></head><script>
 th=pp()
 head(th,'Connect Setup v2.6','','karTV',5);
