--- a/src/tmp-romfs/ROM/HTMLs/HackTV.html
+++ b/src/tmp-romfs/ROM/HTMLs/HackTV.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 bgm=gBGM(z_nv)
 head(th,'Welcome to HackTV','',bgm,-1)
 function doMenu(){d.ua.vu.value=d.ua.um[d.ua.um.selectedIndex].value}
