--- a/src/tmp-romfs/ROM/HTMLs/htv.html
+++ b/src/tmp-romfs/ROM/HTMLs/htv.html
@@ -1,4 +1,4 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 head(th)
 goHTV()</script><center><h1>Redirecting... Please wait.</h1><a href=javascript:goHTV()>Click here if you aren't automatically redirected.</a>
