--- a/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/tmp-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 <script src=file://rom/JS/BuildInfo.js></script></head><script>th=pp()
 head(th,'About this HackTV build','','WTVa','')</script>
 <table cellspacing=0 cellpadding=0><tr><td abswidth=10>&nbsp;<td colspan=3>
