--- a/src/tmp-romfs/ROM/HTMLs/HTMLv2.html
+++ b/src/tmp-romfs/ROM/HTMLs/HTMLv2.html
@@ -1,5 +1,5 @@
 <html><head><display nooptions noscroll allowoffline noreconnectalert>
-<script src=file://rom/h.js></script><script src=file://rom/n.js></script></head><script>th=pp()
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>th=pp()
 head(th,'HTML Sandbox v2.0')
 </script><spacer width=1 height=5 type=block><script>function hV(){
 	switch(d.a.sel[d.a.sel.selectedIndex].value){
@@ -29,7 +29,7 @@ head(th,'HTML Sandbox v2.0')
 	tclr=gTC(th,'t')
 	if(parseInt(d.a.r.value)>7200){msg='You can access, embed, or source a URL. You can also test WebTV JavaScript and HTML. Clear this textarea then type a URL and select the option below.&#13;&#10;&#13;&#10;To source enter a URL, select the source option then scroll to bottom of page. Click the (Show It) button.&#13;&#10;&#13;&#10;You can use the html viewer to mess around with the box or reminisce with WebTV-only code like audioscopes! Try it out. Here is an example, select the HTML preview option.';
 	}else{msg='You can access URLs, and test WebTV JavaScript and HTML. Clear this textarea then type a URL and select the option below.&#13;&#10;&#13;&#10;You can use the HTML viewer to mess around with the box or reminisce with WebTV-only code like audioscopes! Try it out. Here is an example, select the HTML preview option.';
-	}d.write('<textarea rows=15 name=b bgcolor='+bgclr+' text='+tclr+' width=520 wrap=physical nohighlight cursor='+tclr+'>&lt;!-- Begin HackTV Header --&gt;&#13;&#10;&lt;script src=file://rom/h.js&gt;&lt;/script>&#13;&#10;&lt;script src=file://rom/n.js&gt;&lt;/script&gt;&#13;&#10;&lt;script&gt;&#13;&#10;th = pp()&#13;&#10;head(th, \'Generated Page\', \'medium\', \'\', \'\')&#13;&#10;&lt;/script>&#13;&#10;&lt;!-- End HackTV Header --&gt;&#13;&#10;&#13;&#10;&lt;br&gt;&lt;br&gt;'+msg+'&#13;&#10;&#13;&#10;<display notvaudio&gt;&lt;p&gt;&lt;center&gt;&lt;audioscope bgcolor=cccccc height=20 width=320 gain=0 leftcolor=191919 rightcolor=#4c5a67 border=1&gt;&lt;bgsound src=file://rom/Cache/Music/loop1.mid autostart=true loop=-1&gt;</textarea>');
+	}d.write('<textarea rows=15 name=b bgcolor='+bgclr+' text='+tclr+' width=520 wrap=physical nohighlight cursor='+tclr+'>&lt;!-- Begin HackTV Header --&gt;&#13;&#10;&lt;script src=file://rom/Cache/h.js&gt;&lt;/script>&#13;&#10;&lt;script src=file://rom/Cache/n.js&gt;&lt;/script&gt;&#13;&#10;&lt;script&gt;&#13;&#10;th=pp()&#13;&#10;head(th, \'Generated Page\')&#13;&#10;&lt;/script>&#13;&#10;&lt;!-- End HackTV Header --&gt;&#13;&#10;&#13;&#10;&lt;br&gt;&lt;br&gt;'+msg+'&#13;&#10;&#13;&#10;<display notvaudio&gt;&lt;p&gt;&lt;center&gt;&lt;audioscope bgcolor=cccccc height=20 width=320 gain=0 leftcolor=191919 rightcolor=#4c5a67 border=1&gt;&lt;bgsound src=file://rom/Cache/Music/loop1.mid autostart=true loop=9999&gt;</textarea>');
 </script><table><td align=center>
 <spacer Width=100% Height=9 type=block>
 <select width=380 name=sel onchange=hV() selected>
