--- a/src/tmp-romfs/ROM/HTMLs/BGM.html
+++ b/src/tmp-romfs/ROM/HTMLs/BGM.html
@@ -23,5 +23,5 @@ window.onload=doLoad</script>
 				</select></form>
 		<table><tr><td valign=top align=left></table></table>
 		<spacer height=190 type=vertical>
-		<form action=client:gotoadvancedsetup><script>butt(th,'Done','Done',160);</script></form>
+		<form action=javascript:goHTV()><script>butt(th,'Done','Done',160);</script></form>
 </td></tr></table>
