--- a/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
+++ b/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
@@ -8,7 +8,7 @@ th = pp()
 bgm='loop2'
 txt = 'Preparing';
 r=Math.floor(Math.random() * 20)
-if (r == 15){txt = 'Farting out'; bgm='file://rom/Cache/Audio/fart2.mp3'}
+if (r == 15){txt = 'Farting out'; bgm=cch+'/Audio/fart2.mp3'}
 head(th, txt+' your update', '', bgm, -1, true);
 </script>
 <table cellspacing=0 cellpadding=0>
