--- a/src/level0-romfs/ROM/HTMLs/ConnectingDataDownload.html
+++ b/src/level0-romfs/ROM/HTMLs/ConnectingDataDownload.html
@@ -1,33 +1,13 @@
-<html>
-<head>
-	<display nostatus nooptions nosave nosend>
-	<title>Data Download</title>
-</head>
-
-<body bgcolor="#0" text="#42CC55" fontsize="large" hspace=0 vspace=0>
+<html><head><display nooptions nostatus skipback clearback nosave nosend>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script><script>
+head('Updating Local Information','','','',1)</script>
 
 <table cellspacing=0 cellpadding=0>
 	<tr>
-		<td width=104 height=74 valign=middle align=center bgcolor="3B3A4D">
-			<img src="file://ROM/Cache/WebTVLogoJewel.gif" width=86 height=64>
-
-		<td width=20 valign=top align=left bgcolor="3B3A4D">
-			<spacer>
-
-		<td colspan=2 width=436 valign=middle align=left bgcolor="3B3A4D">
-			<font color="D6DFD0" size="+2"><blackface><shadow>
-				<spacer type=block width=1 height=4>
-				<br>
-					Updating Local Information
-				</shadow>
-				</blackface>
-			</font>
-
-	<tr>
-		<td width=104 height=20>
+		<td width=84 height=20>
 		<td width=20>
-		<td width=416>
-		<td width=20>
+		<td width=350>
+		<td width=80>
 
 
 	<tr>
@@ -44,9 +24,7 @@
 </table>
 
 <spacer type=vertical size=42><br>
-<font color=808080>
-<spacer type=horizontal size=24><progressindicator name="downloadprogress" height=44 width=240>
-</font>
+<spacer type=horizontal size=24><progressindicator name="downloadprogress" height=44 width=240><BR>
 
 </body>
 </html>
