--- a/src/level0-romfs/ROM/HTMLs/ConnectingUpdate.html
+++ b/src/level0-romfs/ROM/HTMLs/ConnectingUpdate.html
@@ -1,13 +1,8 @@
-<html><head><display nostatus nooptions nosave nosend><title>Automatic update</title></head>
-<body bgcolor=#0 text=42cc55 fontsize=large hspace=0 vspace=0>
+<html><head><display nooptions nostatus skipback clearback nosave nosend>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script><script>
+head('Automatic update','','','',1)</script>
 <table cellspacing=0 cellpadding=0><tr>
-	<td width=104 height=74 valign=middle align=center bgcolor=3b3a4d><img src=file://ROM/Cache/WebTVLogoJewel.gif width=86 height=64>
-	<td width=20 valign=top align=left bgcolor=3b3a4d><spacer>
-	<td colspan=2 width=436 valign=middle align=left bgcolor=3b3a4d>
-		<font color=d6dfd0 size=+2><blackface><shadow>
-			<spacer type=block width=1 height=4>
-			<br>Automatic update
-			</shadow></blackface>
-		</font>
-	<tr><td width=104 height=20><td width=20><td width=416><td width=20>
-	<tr><td colspan=2><td><font size=+1>Your Internet terminal is contacting WebTV to check for updates. It will power off automatically when the connection and any necessary update is finished.<p>Powering off now will cancel the check.
+<tr><td width=104 height=20><td width=20><td width=416><td width=80>
+<tr><td colspan=2><td><font size=+1>Your Internet terminal is contacting WebTV to check for updates. It will power off automatically when the connection and any necessary update is finished.<p>Powering off now will cancel the check.
+<spacer type=vertical size=42><br>
+<spacer type=horizontal size=24><progressindicator name="downloadprogress" height=44 width=240><BR>
