--- a/src/level0-romfs/ROM/HTMLs/ConnectingVideoAd.html
+++ b/src/level0-romfs/ROM/HTMLs/ConnectingVideoAd.html
@@ -1,16 +1,12 @@
-<html>
-<head>
-	<display nooptions nostatus skipback clearback hspace=0 vspace=0>
-	<title>WebTV: it neither dices nor slices</title>
-	<meta http-equiv="refresh" content="animationscomplete; url=client:VideoAdShown">
-</head>
-
-<body bgcolor=000000 text=808080>
+<html><head><display nooptions nostatus skipback clearback nosave nosend hspace=0 vspace=0>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
+<meta http-equiv="refresh" content="animationscomplete; url=client:VideoAdShown"></head>
+<script>head('WebTV Advertisement','','','',1)</script>
 	<table cellspacing=0 cellpadding=0 height=100% width=100%>
 		<tr><td valign=center align=center>
 			<videoflash src=boot:video>
 		<tr><td height=40>
-			<spacer type=horizontal size=24><progressindicator name="progressindicator" textonly height=20 width=240>
+			<spacer type=horizontal size=24><progressindicator name="progressindicator" textonly height=20 width=240><br>
 	</table>
 </body>
 </html>
