--- a/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
+++ b/src/level0-romfs/ROM/HTMLs/ExtractingAutoDisk.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 <script>	
 bgm='loop2'
