--- a/src/level0-romfs/ROM/HTMLs/NVRAM.html
+++ b/src/level0-romfs/ROM/HTMLs/NVRAM.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
 head('NVRAM Test Page');</script><h1>NVRAM Test:</h1>
 <table border=1><tr><td colspan=99>NVRAM Contents
