--- a/src/level0-romfs/ROM/HTMLs/RCALogo.html
+++ b/src/level0-romfs/ROM/HTMLs/RCALogo.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<display nooptions nostatus skipback clearback>
+	<display nooptions nostatus skipback clearback nosave nosend>
 	<title>RCA Logo</title>
 	<meta http-equiv=Refresh content="3; url=client:LogoShown">
 </head>
