--- a/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/AdvancedPhoneSetup.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
 head('Advanced dialing options')
 </script><table cellspacing=0 cellpadding=0>
