--- a/src/level0-romfs/ROM/HTMLs/BGM.html
+++ b/src/level0-romfs/ROM/HTMLs/BGM.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert>
+<html><head><display nooptions noscroll notvaudio switchtowebmode allowoffline noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
 bgm=gV(1)
 function doSubmit(c){if(c){sB(1,c)}}
