--- a/src/level0-romfs/ROM/HTMLs/BuildInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/BuildInfo.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 <script src=file://rom/JS/BuildInfo.js></script></head><script>
 head('About This HackTV Build','','FridayEvilArr',-1)</script>
