--- a/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
+++ b/src/level0-romfs/ROM/HTMLs/ConnectSetup.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
 <script src=file://rom/JS/htv-cSetup.js></script>
 </head><form name=t><input type=hidden name=h value=&pname;></form>
