--- a/src/level0-romfs/ROM/HTMLs/HTMLv2.html
+++ b/src/level0-romfs/ROM/HTMLs/HTMLv2.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll allowoffline noreconnectalert>
+<html><head><display nooptions noscroll allowoffline noreconnectalert nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head><script>
 head('HTML Sandbox v2.0')
 </script><spacer width=1 height=5 type=block><script>function hV(){
