--- a/src/level0-romfs/ROM/HTMLs/NeedBootUpgrade.html
+++ b/src/level0-romfs/ROM/HTMLs/NeedBootUpgrade.html
@@ -1,34 +1,9 @@
-<html>
-<head>
-	<display NoLogo NoStatus NoOptions ClearBack NoSave>
-</head>
-<style type="text/css">
-#MSNLogo {
-	position: absolute;
-	top: 7;
-	left: 10;
-	width: 87;
-}
-</style>
-<body bgcolor="#191919" text="#42CC55" fontsize="large" hspace=0 vspace=0>
+<html><head><display NoLogo NoStatus NoOptions ClearBack nosave nosend></head>
+<script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script>
+<script src=file://rom/JS/BuildInfo.js></script></head><script>
+head('Boot Upgrade Required')</script>
 
 <table cellspacing=0 cellpadding=0>
-	<tr>
-		<td width=104 height=74 valign=middle align=center bgcolor="3B3A4D">
-			<img src="file://ROM/tvimages/WebTVPlusJewelLogo.gif" width=86 >
-
-		<td width=20 valign=top align=left bgcolor="3B3A4D">
-			<spacer>
-
-		<td colspan=2 width=436 valign=middle align=left bgcolor="3B3A4D">
-			<font color="D6DFD0" size="+2"><blackface><shadow>
-				<spacer type=block width=1 height=4>
-				<br>
-					Boot Upgrade Required
-				</shadow>
-				</blackface>
-			</font>
-
 	<tr>
 		<td width=104 height=20>
 		<td width=20>
@@ -52,17 +27,7 @@
 		<td width=20>
 		<td height=20>
 	<tr>
-		<td>
-		<td height=2 bgcolor=2B2B2B>
-			<spacer>
-	<tr>
-		<td height=1>
-	<tr>
-		<td>
-		<td height=2 bgcolor=0D0D0D>
-			<spacer>
-	<tr>
-		<td height=6>
+		<td colspan=2 height=6><hr>
 	<tr>
 		<td>
 		<td align=right>
@@ -70,13 +35,13 @@
 				<tr>
 					<td>
 						<font color=e7ce4a size=-1><shadow>
-						<form action=client:PowerOff><input type=submit font=proportional width=125 value="Power Off" borderImage="file://rom/Borders/ButtonBorder2.bif" usestyle></form>
+						<form action=client:PowerOff><script>butt('Power Off')</script></form>
 						</font>
 					<td>
 						&nbsp;
 					<td>
 						<font color=e7ce4a size=-1><shadow>
-						<form action=client:GoToInfoPage><input type=submit font=proportional width=125 value="WebTV info" borderImage="file://rom/Borders/ButtonBorder2.bif" usestyle selected></form>
+						<form action=client:GoToInfoPage><script>butt('WebTV info','','','','selected')</script></form>
 						</font>
 			</table>
 </table>
