--- a/src/level0-romfs/ROM/HTMLs/PowerOff.html
+++ b/src/level0-romfs/ROM/HTMLs/PowerOff.html
@@ -1,1 +1,1 @@
-<html><head><display nostatus nooptions clearback></head><body bgcolor=#0></body></html>
+<html><head><display nostatus nooptions clearback nosave nosend></head><body bgcolor=#0></body></html>
