--- a/src/level0-romfs/ROM/HTMLs/SSIDInfo.html
+++ b/src/level0-romfs/ROM/HTMLs/SSIDInfo.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head>
 <script>head('WebTV SSID');</script>
 <table cellspacing=0 cellpadding=0 width="99%">
