--- a/src/level0-romfs/ROM/HTMLs/Themes.html
+++ b/src/level0-romfs/ROM/HTMLs/Themes.html
@@ -1,4 +1,4 @@
-<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert>
+<html><head><display nooptions noscroll allowoffline notvaudio switchtowebmode noreconnectalert nosave nosend>
 <script src=file://rom/Cache/h.js></script><script src=file://rom/Cache/n.js></script></head>
 <script>head('Theme Settings','large','world1',5)
 function sBG(c){sB(0,c)}</script>
